--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -4,81 +4,97 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#FFFFFF"
-    tools:context=".Perfil">
+    android:background="@color/verde4"
+    android:backgroundTint="@color/verde4"
+    tools:context=".Perfil" >
 
-    <EditText
-        android:id="@+id/nombreR2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:fontFamily="@font/quicksand_bold"
-        android:inputType="textPersonName"
-        android:text="Nombre"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="204dp" />
-
-    <EditText
-        android:id="@+id/usuarioR2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:fontFamily="@font/quicksand_bold"
-        android:inputType="textEmailAddress"
-        android:text="Correo"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="321dp" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/baseline_perm_identity_24"
-        tools:layout_editor_absoluteX="179dp"
-        tools:layout_editor_absoluteY="125dp" />
-
-    <EditText
-        android:id="@+id/apellidoR2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:fontFamily="@font/quicksand_bold"
-        android:inputType="textPersonName"
-        android:text="Apellido"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="258dp" />
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="178dp"
+        android:layout_height="170dp"
+        tools:layout_editor_absoluteX="129dp"
+        tools:layout_editor_absoluteY="55dp"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="262dp"
-        android:layout_height="122dp"
-        android:background="#299916"
-        android:backgroundTint="#299916"
-        tools:layout_editor_absoluteX="74dp"
-        tools:layout_editor_absoluteY="546dp">
+        android:layout_width="match_parent"
+        android:layout_height="650sp"
+        android:background="@drawable/text_bord"
+        android:elevation="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand_bold"
+            android:text="Lesly Gaibor"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="103dp"
+            tools:layout_editor_absoluteY="69dp" />
 
         <TextView
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/quicksand_bold"
-            android:text="Número de encuestas"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/design_default_color_on_secondary"
-            tools:layout_editor_absoluteX="50dp"
-            tools:layout_editor_absoluteY="19dp" />
+            android:text="lcgaibor@espe.edu.ec"
+            android:textColor="@color/colorverde"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="103dp"
+            tools:layout_editor_absoluteY="120dp" />
 
-        <TextView
-            android:id="@+id/textView19"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/quicksand_bold"
-            android:text="0"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            tools:layout_editor_absoluteX="115dp"
-            tools:layout_editor_absoluteY="66dp" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="353dp"
+            android:layout_height="174dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="180dp"
+            android:background="@drawable/button_border"
+            android:backgroundTint="@color/verde4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="119dp"
+                android:layout_height="68dp"
+                android:text="Numero de encuestas:"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="37dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+            <TextView
+                android:id="@+id/textView45"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10"
+                android:textColor="@color/black"
+                android:textSize="40sp"
+                tools:layout_editor_absoluteX="61dp"
+                tools:layout_editor_absoluteY="80dp" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="245dp"
+                android:layout_height="161dp"
+                android:layout_marginStart="123dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="-30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/taking_notes_pana" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
