--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -21,6 +21,7 @@
         android:layout_height="650sp"
         android:background="@drawable/text_bord"
         android:elevation="30dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -29,31 +30,38 @@
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="104dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginEnd="104dp"
             android:fontFamily="@font/quicksand_bold"
             android:text="Lesly Gaibor"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/black"
             android:textStyle="bold"
-            tools:layout_editor_absoluteX="103dp"
-            tools:layout_editor_absoluteY="69dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="100dp"
             android:text="lcgaibor@espe.edu.ec"
             android:textColor="@color/colorverde"
             android:textSize="20sp"
             android:textStyle="bold"
-            tools:layout_editor_absoluteX="103dp"
-            tools:layout_editor_absoluteY="120dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="353dp"
             android:layout_height="174dp"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
-            android:layout_marginBottom="180dp"
+            android:layout_marginBottom="264dp"
             android:background="@drawable/button_border"
             android:backgroundTint="@color/verde4"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -65,21 +73,24 @@
                 android:layout_width="119dp"
                 android:layout_height="68dp"
                 android:text="Numero de encuestas:"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                tools:layout_editor_absoluteX="37dp"
-                tools:layout_editor_absoluteY="16dp" />
+                tools:layout_editor_absoluteX="33dp"
+                tools:layout_editor_absoluteY="25dp" />
 
             <TextView
                 android:id="@+id/textView45"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="10"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="40sp"
+                android:textStyle="bold"
                 tools:layout_editor_absoluteX="61dp"
-                tools:layout_editor_absoluteY="80dp" />
+                tools:layout_editor_absoluteY="93dp" />
 
             <ImageView
                 android:id="@+id/imageView4"
