--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -5,107 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/verde4"
-    android:backgroundTint="@color/verde4"
-    tools:context=".Perfil" >
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="178dp"
-        android:layout_height="170dp"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="55dp"
-        tools:srcCompat="@tools:sample/avatars" />
+    android:backgroundTint="#F1F3F1"
+    tools:context=".Perfil">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
-        android:layout_height="650sp"
-        android:background="@drawable/text_bord"
+        android:layout_height="350sp"
+        android:background="@drawable/text_bord_perfil"
         android:elevation="30dp"
-
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="104dp"
-            android:layout_marginTop="70dp"
-            android:layout_marginEnd="104dp"
-            android:fontFamily="@font/quicksand_bold"
-            android:text="Lesly Gaibor"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="157dp"
+            android:layout_height="159dp"
+            tools:layout_editor_absoluteX="131dp"
+            tools:layout_editor_absoluteY="73dp"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginEnd="100dp"
+            android:layout_marginTop="20dp"
             android:text="lcgaibor@espe.edu.ec"
             android:textColor="@color/colorverde"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="353dp"
-            android:layout_height="174dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="264dp"
-            android:background="@drawable/button_border"
-            android:backgroundTint="@color/verde4"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <TextView
-                android:id="@+id/textView19"
-                android:layout_width="119dp"
-                android:layout_height="68dp"
-                android:text="Numero de encuestas:"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="33dp"
-                tools:layout_editor_absoluteY="25dp" />
-
-            <TextView
-                android:id="@+id/textView45"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="40sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="61dp"
-                tools:layout_editor_absoluteY="93dp" />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="245dp"
-                android:layout_height="161dp"
-                android:layout_marginStart="123dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="-30dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/img_perfil" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintEnd_toEndOf="@+id/imageView2"
+            app:layout_constraintStart_toStartOf="@+id/imageView2"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="514dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="252dp"></LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
