--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="lcgaibor@espe.edu.ec"
-            android:textColor="@color/colorverde"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -49,7 +49,7 @@
         android:id="@+id/linearLayout3"
         android:layout_width="347dp"
         android:layout_height="408dp"
-        android:layout_marginTop="-30dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/text_bord_cont_perfil"
         android:elevation="30dp"
         android:orientation="vertical"
@@ -106,7 +106,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -118,13 +117,14 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
 
-            <TextView
+            <EditText
                 android:id="@+id/textView549"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Lesly"
                 android:textAlignment="textEnd"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -138,7 +138,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -150,13 +149,14 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
 
-            <TextView
+            <EditText
                 android:id="@+id/textView449"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Gaibor"
                 android:textAlignment="textEnd"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -170,7 +170,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:orientation="horizontal">
 
             <TextView
@@ -182,16 +181,26 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/textView49"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Cambiar"
-                android:textAlignment="textEnd"
-                android:textSize="20sp" />
+                app:endIconMode="password_toggle"
+                app:passwordToggleDrawable="@android:drawable/ic_menu_view"
+                app:passwordToggleEnabled="true">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textView49"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:text="Cambiar"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
+
 
     </LinearLayout>
 
