--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -53,7 +53,7 @@
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
             android:inputType="textEmailAddress"
-            android:text="Correo"
+            android:hint="Correo"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black" />
 
@@ -67,7 +67,7 @@
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
             android:inputType="textPassword"
-            android:text="Contraseña"
+            android:hint="Contraseña"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black" />
 
