--- a/app/src/main/res/layout/registrar_usuario.xml
+++ b/app/src/main/res/layout/registrar_usuario.xml
@@ -54,7 +54,7 @@
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
             android:inputType="textPassword"
-            android:text="Contraseña"
+            android:hint="Contraseña"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
             android:inputType="textPersonName"
-            android:text="Nombre"
+            android:hint="Nombre"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
             android:inputType="textPersonName"
-            android:text="Apellido"
+            android:hint="Apellido"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +105,7 @@
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
             android:inputType="textEmailAddress"
-            android:text="Correo"
+            android:hint="Correo"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
