--- a/app/src/main/res/layout/encuesta.xml
+++ b/app/src/main/res/layout/encuesta.xml
@@ -1988,6 +1988,50 @@
                             android:textSize="20sp" />
                     </RadioGroup>
 
+                    <View
+                        android:id="@+id/view16"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_weight="1"
+                        android:background="#D9D9D9" />
+
+                    <TextView
+                        android:id="@+id/textView30"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10sp"
+                        android:background="@drawable/button_border"
+                        android:backgroundTint="@color/verde5"
+                        android:gravity="center"
+                        android:padding="10sp"
+                        android:text="¿Siente que las autoridades están tomando medidas adecuadas para abordar el problema de las drogas en su comunidad?"
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
+
+                    <RadioGroup
+                        android:id="@+id/grupoS5Preg5"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <RadioButton
+                            android:id="@+id/radioButton93"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10sp"
+                            android:text="Sí"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+
+                        <RadioButton
+                            android:id="@+id/radioButton94"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10sp"
+                            android:text="No"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+                    </RadioGroup>
+
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
